--- a/Portfolio/Dockerfile
+++ b/Portfolio/Dockerfile
@@ -12,4 +12,4 @@ RUN python manage.py makemigrations
 
 RUN python manage.py migrate
 
-CMD [ "python", "manage.py", "runserver", "0.0.0.0:80" ]
+CMD python manage.py runserver 0.0.0.0:80
